--- a/caravan1/index.html
+++ b/caravan1/index.html
@@ -44,7 +44,6 @@
   <main class="main">
     <section class="blog">
       <h2 class="blog-heading">Recent Blogs</h2>
-
       <div class="blog-box">
         <div class="blog-item">
           <img src="img/forest.jpg" class="blog-image">
@@ -114,7 +113,15 @@
           </section>
         </div>
       </div>
-
+      <div class="pagination">
+        <p><<</p>
+        <p><</p>
+        <p>1</p>
+        <p>2</p>
+        <p>3</p>
+        <p>></p>
+        <p>>></p>
+      </div>
     </section>
 
     <div class="sidebar">
@@ -128,7 +135,7 @@
           <p class="popular-text">How humans could evolve<br>to survive in space</p>
         </div>
       </section>
-      <section class="instgram">
+      <section class="instagram">
         <h2 class="instagram-heading common-heading">Instagram</h2>
         <div class="sidebar-contents">
           <div class="instagram-box"></div>
